[package]
name = "d300"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
usb = ["dep:tokio-serial"]

[dependencies]
tokio = { version = "1.32.0", features = ["io-util"] }
futures = "0.3.28"
tokio-serial = { version = "5.4.4", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"